--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,5 +2,8 @@
 <div class = 'container'>
   <% @tasks.each do |task| %>
     <h6><%= link_to task.title, task_path(task) %></h6>
+    
+    <%= link_to  "🗑️", task_path(task), method: 'delete', data: { confirm: 'Are you sure?' } %>
   <% end %>
+  <%= link_to "Create a new task!", new_task_path %>
 </div>
